5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1573_1560.log
== SUBMITION (2019-03-13 14:43:19) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print(.lower())
-- EXECUTION TIME:
0.143034
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower())
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:43:56) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.167378
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:43:59) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.241702
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:43:59) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.15848
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:43:59) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.106241
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:43:59) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.174691
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:43:59) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.143876
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:44:04) 
-- CODE:
string = "augusta ada bayron, a condessa de lovelace, nasceu em 1815, na inglaterra."
print( .lower(string))
-- EXECUTION TIME:
0.161842
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print( .lower(string))
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:38:19) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- ERROR:
File "XXXX", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:38:21) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.259823
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:39:02) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower(string).lower())
-- ERROR:
File "XXXX", line 2
    print(.lower(string).lower())
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:39:50) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- ERROR:
File "XXXX", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:40:03) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower()(string))
-- ERROR:
File "XXXX", line 2
    print(.lower()(string))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:40:05) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower()(string))
-- ERROR:
File "XXXX", line 2
    print(.lower()(string))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:40:05) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower()(string))
-- ERROR:
File "XXXX", line 2
    print(.lower()(string))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:40:07) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower()(string))
-- EXECUTION TIME:
0.220471
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower()(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:40:08) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- ERROR:
File "XXXX", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:40:10) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(.lower(string))
-- EXECUTION TIME:
0.188829
-- ERROR:
  File "/home/codebench/codes/1573/1560/main.py", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:40:55) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:40:57) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.134696
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:40:58) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:41:02) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.131947
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:41:04) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:41:10) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.249603
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:41:12) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.153057
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:41:12) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.166363
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:41:12) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.111802
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:41:12) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.0961599
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:41:12) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.088469
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:41:12) 
-- CODE:
string = "Augusta Ada Byron, A Condessa De ovelace, nasceu em 1815, na inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de ovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:42:24) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:42:25) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.166245
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:42:26) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:42:59) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.125395
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:43:04) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.154748
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:43:05) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:43:20) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.206328
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:43:21) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:43:22) 
-- CODE:
string = "Augusta Ada Byron, a Candessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.148947
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a candessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:43:50) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:43:51) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.15764
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
